# Fall-Risk-Kit

./: .gitignore  404.html  LICENSE  README-presentation.md  README.github.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme_project_presentation_concepts.md  requirements.txt  sitemap.xml
HAL/: mkdocs_py_scope_m1.md
api/: index.html
api/__init__/: index.html
api/alerts/: index.html
api/api/: index.html
api/config/: index.html
api/events/: index.html
api/features/: index.html
api/fhir_mapper/: index.html
api/ingestion/: index.html
api/risk/: index.html
api/runner/: index.html
api/storage/: index.html
architecture/: index.html
docs/: architecture.md  index.md  stacks.md  usage.md
docs_gen/: gen_ref_nav.py
fallrisk_kit/: __init__.py  alerts.py  api.py  config.py  events.py  features.py  fhir_mapper.py  ingestion.py  risk.py  runner.py  storage.py
infra/: app.py  requirements.txt
infra/stacks/: __init__.py  analytics_warehouse_stack.py  app_services_stack.py  backup_dr_stack.py  base.py  cognito_auth_stack.py  compliance_guardrails_stack.py  core_foundation_stack.py  cost_governance_stack.py  data_lake_core_stack.py  embeddings_and_rag_stack.py  etl_orchestration_stack.py  events_bus_stack.py  feature_store_mlops_stack.py  fhir_healthlake_stack.py  fhir_transform_gateway_stack.py  interop_apis_stack.py  notifications_stack.py  (+10 more)
scripts/: run_api.ps1  run_pipeline.ps1  simulate.ps1
search/: search_index.json
simulator/: imu_stream.py
tests/: test_end_to_end.py  test_features.py  test_risk.py
usage/: index.html
